test/should-fail/jfxc590.fx
/*
 * Regression test: JFXC-590 :  Disallow "var" and "let" declarations in classes 
 *
 * @test/fail
 */

class jfxc590 {
   var x : Integer
}
